# maria

./: .buildinfo  .cookiecutter-maria.yaml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitignore.REMOVED.git-id  .pre-commit-config.yaml  AUTHORS.rst  CLAUDE.md  CLAUDE.md.REMOVED.git-id  CONTRIBUTING.rst  CONTRIBUTING.rst.REMOVED.git-id  LICENSE  LICENSE.REMOVED.git-id  MANIFEST.in  MUSTANG-2_cluster.ipynb  MUSTANG-2_cluster.ipynb.REMOVED.git-id  MUSTANG-2_empty.ipynb  MUSTANG-2_empty.ipynb.REMOVED.git-id  README.md  README.rst  README.rst.REMOVED.git-id  Synthetic_AtLAST_observations-testing.ipynb  Synthetic_AtLAST_observations-testing.ipynb.REMOVED.git-id  Synthetic_AtLAST_observations-testing.py  Synthetic_AtLAST_observations-testing.py.REMOVED.git-id  Untitled.ipynb  Untitled.ipynb.REMOVED.git-id  Untitled1.ipynb  arrays.html  arrays.html.REMOVED.git-id  calibration.html  calibration.html.REMOVED.git-id  cmb.html  cmb.html.REMOVED.git-id  customizing.html  customizing.html.REMOVED.git-id  filters.ipynb  genindex.html  (+56 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  filters-checkpoint.ipynb  maps-checkpoint.ipynb
Mock_obs/: tsz_filtered.fits  tsz_noisemap.fits  tsz_synthetic.fits  tsz_x_filtered.fits  tsz_x_noisemap.fits  tsz_x_synthetic.fits
_images/: arrays-1.png.REMOVED.git-id  arrays-2.png.REMOVED.git-id  arrays-3.png.REMOVED.git-id  arrays-4.png.REMOVED.git-id  arrays-5.png.REMOVED.git-id  bands-1.png.REMOVED.git-id  generation-1.png.REMOVED.git-id  generation-2.png.REMOVED.git-id  generation-3.png.REMOVED.git-id  generation-4.png.REMOVED.git-id  generation-5.png.REMOVED.git-id  maps-1.png.REMOVED.git-id  overview-1.png.REMOVED.git-id  plans-1.png.REMOVED.git-id  sites-1.png.REMOVED.git-id  tutorials_AtLAST_cluster_10_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_11_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_11_1.png.REMOVED.git-id  tutorials_AtLAST_cluster_12_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_12_1.png.REMOVED.git-id  tutorials_AtLAST_cluster_14_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_15_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_18_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_18_3.png.REMOVED.git-id  tutorials_AtLAST_cluster_19_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_20_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_5_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_7_0.png.REMOVED.git-id  tutorials_AtLAST_cluster_9_0.png.REMOVED.git-id  tutorials_AtLAST_galaxy_13_0.png.REMOVED.git-id  tutorials_AtLAST_galaxy_14_0.png.REMOVED.git-id  tutorials_AtLAST_galaxy_14_1.png.REMOVED.git-id  tutorials_AtLAST_galaxy_15_0.png.REMOVED.git-id  tutorials_AtLAST_galaxy_15_1.png.REMOVED.git-id  tutorials_AtLAST_galaxy_17_0.png.REMOVED.git-id  tutorials_AtLAST_galaxy_20_0.png.REMOVED.git-id  tutorials_AtLAST_galaxy_21_0.png.REMOVED.git-id  tutorials_AtLAST_galaxy_8_1.png.REMOVED.git-id  tutorials_MUSTANG-2_cluster_10_0.png.REMOVED.git-id  tutorials_MUSTANG-2_cluster_12_0.png.REMOVED.git-id  (+139 more)
_sources/: arrays.rst.txt  getting-started.rst.txt  index.rst.txt  inputs.rst.txt  installation.rst.txt  instruments.rst.txt  instruments.rst.txt.REMOVED.git-id  maps.rst.txt  papers.rst.txt  papers.rst.txt.REMOVED.git-id  plans.rst.txt  simulations.rst.txt  simulations.rst.txt.REMOVED.git-id  sites.rst.txt  supported-sites.rst.txt  supported-sites.rst.txt.REMOVED.git-id  tutorials.rst.txt  usage.rst.txt
_static/: base-stemmer.js.REMOVED.git-id  basic.css.REMOVED.git-id  clipboard.min.js.REMOVED.git-id  copybutton.css.REMOVED.git-id  copybutton.js.REMOVED.git-id  copybutton_funcs.js.REMOVED.git-id  debug.css.REMOVED.git-id  doctools.js.REMOVED.git-id  english-stemmer.js.REMOVED.git-id  language_data.js.REMOVED.git-id  nbsphinx-broken-thumbnail.svg.REMOVED.git-id  nbsphinx-code-cells.css.REMOVED.git-id  nbsphinx-no-thumbnail.svg.REMOVED.git-id  pygments.css.REMOVED.git-id  searchtools.js.REMOVED.git-id  skeleton.css.REMOVED.git-id  sphinx_highlight.js.REMOVED.git-id
maps/: ACT0329_CL0035.097.z_036.00GHz.fits  ACT0329_CL0035.097.z_038.00GHz.fits  ACT0329_CL0035.097.z_040.00GHz.fits  ACT0329_CL0035.097.z_042.00GHz.fits  CGM_Ponos_fits_CII_jy_6.5.fits.REMOVED.git-id  SZ_pairs_c0001_s127_x-y-vz_p00_Jy.fits.REMOVED.git-id  Untitled.ipynb  Zoom_Ponos_fits_CII_jy_6.5.fits.REMOVED.git-id  big_cluster.fits.REMOVED.git-id  cluster.fits  cluster.fits.REMOVED.git-id  empty.fits  empty.fits.REMOVED.git-id  galaxy.fits.REMOVED.git-id  protocluster.fits.REMOVED.git-id  tsz.fits.REMOVED.git-id  tsz_x.fits.REMOVED.git-id
maria/: __init__.py  __init__.py.REMOVED.git-id  _version.py  _version.py.REMOVED.git-id  array.py  array.py.REMOVED.git-id  atmosphere.py  atmosphere.py.REMOVED.git-id  base.py  base.py.REMOVED.git-id  cmb.py  cmb.py.REMOVED.git-id  cmb_sky.py  cmb_sky.py.REMOVED.git-id  config_ScanPattern.py  config_Telescope.py  configs.py  constants.py  coordinates.py  coordinates.py.REMOVED.git-id  coordinator.py  coordinator.py.REMOVED.git-id  coords.py  coords.py.REMOVED.git-id  errors.py  functions.py  functions.py.REMOVED.git-id  io.py  io.py.REMOVED.git-id  mappers.py  mappers.py.REMOVED.git-id  mock_obs.py  mock_obs.py.REMOVED.git-id  models.py  noise.py  noise.py.REMOVED.git-id  object_ARRAY.py  object_LAM.py  object_PLAN.py  objects.py  (+21 more)
maria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: Untitled.ipynb  Untitled.ipynb.REMOVED.git-id  tutorial.ipynb
tests/: conftest.py  test_bl_elements_as_ophyd_objs.py  test_maria.py  test_mock_obs.py
tests_/: example_transfer_function.py  example_transfer_function.py.REMOVED.git-id
tutorials/: AtLAST_cluster.html  AtLAST_cluster.html.REMOVED.git-id  AtLAST_cluster.ipynb.REMOVED.git-id  AtLAST_galaxy.html  AtLAST_galaxy.html.REMOVED.git-id  AtLAST_galaxy.ipynb.REMOVED.git-id  MUSTANG-2_cluster.html  MUSTANG-2_cluster.html.REMOVED.git-id  MUSTANG-2_cluster.ipynb  MUSTANG-2_cluster.ipynb.REMOVED.git-id  cluster-mustang-2.html  cluster-mustang-2.html.REMOVED.git-id  cluster-mustang-2.ipynb  cluster-mustang-2.ipynb.REMOVED.git-id  cmb-patch.html  cmb-patch.html.REMOVED.git-id  cmb-patch.ipynb  (+30 more)
(+1343 files in other folders)
