[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maria"
version = "0.9.7"
description = "Ground-based telescope simulations"
readme = { file = "README.rst", content-type = "text/x-rst" }
dependencies = [
  "astropy",
  "cmocean",
  "h5py",
  "healpy",
  "matplotlib",
  "numpy",
  "pandas",
  "reproject",
  "scipy",
  "tables",
  "tqdm",
]
requires-python = ">=3.9"
authors = [
  { name = "Thomas Morris", email = "thomasmorris@princeton.edu" },
  { name = "Joshiwa van Marrevijk", email = "joshiwavanmarrewijk@eso.org" }
]
maintainers = [
  { name = "Thomas Morris", email = "thomasmorris@princeton.edu" },
  { name = "Joshiwa van Marrevijk", email = "joshiwavanmarrewijk@eso.org" }
]
license = {file = "LICENSE"}
keywords = ["atmosphere", "cosmology", "astronomy"]  # Optional
classifiers = [  # Optional
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies] # Optional
dev = [
  "black",
  "coverage",
  "flake8",
  "furo",
  "ipykernel",
  "isort",
  "jupyter",
  "nbstripout",
  "nbsphinx",
  "pandoc",
  "pre-commit",
  "pre-commit-hooks",
  "pytest",
  "pytest-codecov",
  "sphinx",
  "twine",
  "ipython",
  "matplotlib",
  "numpydoc",
  "sphinx-copybutton",
  "sphinx_rtd_theme",
]

[project.urls]
"Homepage" = "https://github.com/thomaswmorris/maria"
"Bug Reports" = "https://github.com/thomaswmorris/maria/issues"
"Source" = "https://github.com/thomaswmorris/maria/"

[tool.hatch.build.targets.sdist]
exclude = [
  "maria/weather/data/*.h5",
  "maria/atmosphere/spectra/data/*.h5",
  "maria/map/data/*.fits",
  "maria/tests",
  "docs",
]
