[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools_scm"]
build-backend = "hatchling.build"

[project]
name = "maria"
dynamic = ["version"]
description = "A simulator for ground-based millimeter- and submillimeter-wave telescopes."
readme = { file = "README.rst", content-type = "text/x-rst" }
dependencies = [
  "astropy",
  "cmocean",
  "dask",
  "h5py",
  "healpy",
  "matplotlib",
  "numpy",
  "pandas",
  "pytz",
  "reproject",
  "requests",
  "scipy",
  "tqdm",
]
requires-python = ">=3.9"
authors = [
  { name = "Thomas Morris", email = "thomas.w.morris@yale.edu" },
  { name = "Joshiwa van Marrevijk", email = "joshiwavanmarrewijk@eso.org" }
]
maintainers = [
  { name = "Thomas Morris", email = "thomas.w.morris@yale.edu" },
  { name = "Joshiwa van Marrevijk", email = "joshiwavanmarrewijk@eso.org" }
]
license = {file = "LICENSE"}
keywords = ["atmosphere", "cosmology", "astronomy"]  # Optional
classifiers = [  # Optional
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies] # Optional
mapmaking = [
  "torch",
]

dev = [
  "black",
  "coverage",
  "flake8",
  "furo",
  "ipykernel",
  "isort",
  "jupyter",
  "nbstripout",
  "nbsphinx",
  "pandoc",
  "pre-commit",
  "pre-commit-hooks",
  "pytest",
  "pytest-codecov",
  "sphinx",
  "twine",
  "ipython",
  "matplotlib",
  "numpydoc",
  "sphinx-copybutton",
  "sphinx_rtd_theme",
]

[project.urls]
"Homepage" = "https://github.com/thomaswmorris/maria"
"Bug Reports" = "https://github.com/thomaswmorris/maria/issues"
"Source" = "https://github.com/thomaswmorris/maria/"

[tool.hatch.build.targets.sdist]
exclude = [
  "maria/atmosphere/spectra/data/**/*.h5",
  "maria/atmosphere/weather/data/**/*.h5",
  "data",
  "docs",
]

[tool.hatch.build.targets.wheel]
only-include = ["maria"]

[tool.setuptools_scm]
version_file = "maria/_version.py"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "maria/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
